<resources>
    <string name="app_name">NRG</string>
    <string name="todo">TODO</string>
    <string name="contract">Contract</string>
    <string name="engineer">Engineer</string>
    <string name="project">Project</string>
    <string name="project_1">project 1</string>
    <string name="project_2">Project 2</string>
    <string name="project_3">Project 3</string>
    <string name="Project_1">Project 1</string>
    <string name="Project_2">Project 2</string>
    <string name="welcome_to_nrg_group">WELCOME TO NRG</string>
    <string name="todo1">TODO</string>
    <string name="for_home_screen">For Home Screen</string>
    <string name="notify">Notify</string>
    <string name="enter_admin_name">Enter admin name</string>
    <string name="enter_admin_master_key">Enter Admin Master key</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">submit</string>
    <string name="your_in_construction">your in construction</string>
</resources>