<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="1"
        tools:ignore="MissingConstraints"
        android:foregroundGravity="center"
        >

    <TextView
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_admin_master_key"
        android:textColor="@color/white"
        android:id="@+id/admin"
        android:layout_gravity="center"
        android:padding="22dp"

        tools:ignore="MissingConstraints"


        />

        <EditText
            android:layout_marginTop="22dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:hint="@string/enter_admin_name"
            android:id="@+id/name_admin"

            android:layout_gravity="center"
            android:padding="22dp"


            />
        <EditText
            android:layout_marginTop="22dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:hint="@string/enter_password"
           android:id="@+id/password"

            android:layout_gravity="center"
            android:padding="22dp"


            />
        <Button
            android:layout_marginTop="22dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:textColor="@color/white"

            />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>