<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageButton
        android:id="@+id/Guest"
        android:layout_width="wrap_content"
        android:layout_height="193dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/contract"
        android:foregroundGravity="center"
        android:src="@drawable/guest" />

    <ImageButton
        android:id="@+id/Engineer"
        android:layout_width="wrap_content"
        android:layout_height="193dp"
        android:layout_below="@+id/Guest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/engineer"
        android:foregroundGravity="center"
        android:src="@drawable/en" />

    <ImageButton
        android:id="@+id/Construction"
        android:layout_width="wrap_content"
        android:layout_height="193dp"
        android:layout_below="@+id/Engineer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/project"
        android:foregroundGravity="center"
        android:src="@drawable/constr"
        tools:ignore="NotSibling" />

</RelativeLayout>
